# pico_projects

advent/: README.md
advent/day1/: CMakeLists.txt  blink.c
advent/day2/: CMakeLists.txt  day2.c
advent/day3/: CMakeLists.txt  day3.c
advent/day4/: CMakeLists.txt  day4.c
advent/day5/: CMakeLists.txt  day5.c
advent/day6/: CMakeLists.txt  day6.c  picoCommon.c  picoCommon.h
